2003-07-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_installing.sgml (AT91): Tell users to switch JP1
	(or SW1 for EB40) when installing, and warn them in no
	uncertain terms the consequences of failing to do so.

2003-07-01  Mark Salter  <msalter@redhat.com>

	* cdl/redboot.cdl (CYGBLD_BUILD_REDBOOT_WITH_MCOPY): New option.
	* src/mcopy.c: New file adding mcopy command.
	* doc/redboot_cmds.sgml: Add mcopy.

2003-06-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_installing.sgml: Clarify use of correct cables with
	serial ports with AT91 boards.

2003-06-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_cmds.sgml (IP): Clarify last change a bit and fix typos
	and markup.

2003-05-20  David Vrabel  <dvrabel@arcom.com>
2003-05-20  Ian Campbell  <icampbell@arcom.com>
 
	* src/net/net_io.c: Add the ability to specify a netmask length to
	the ip_address command
	* doc/redboot_cmds.sgml: Document the above.

2003-06-24  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
2003-06-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/net/tftp_client.c: Define tftp_stream.last_good_block to
	permit downloads > 32MB.
	(tftp_ack): Allow last_good_block to wrap.
	(tftp_stream_read): Ditto.

	* src/net/bootp.c: Use correct DHCP message type for DHCPREQUEST.

2003-05-20  Mark Salter  <msalter@redhat.com>

	* cdl/redboot.cdl (CYGBLD_REDBOOT_CMD_LINE_HISTORY): New option.
	* src/io.c: Support history command and history expansion.
	* doc/redboot.sgml: Document command history support.

2003-05-14  Mark Salter  <msalter@redhat.com>

	* src/flash.c (flash_get_config): Add CONFIG_NETPORT case.

2003-05-13  Nick Garnett  <nickg@balti.calivar.com>

	* doc/redboot_installing.sgml: Added installation instructions for
	Atmel EB40A, EB42 and EB55 boards.

2003-05-06  Mark Salter  <msalter@redhat.com>

	* src/main.c (cyg_start): Clear gdb_active when returning from stub.

2003-05-06  Pierre Habraken  <Pierre.Habraken@imag.fr>
